[gd_scene load_steps=27 format=3 uid="uid://bes5a0vv8qryu"]

[ext_resource type="Script" path="res://scripts/world.gd" id="1_2dabk"]
[ext_resource type="PackedScene" uid="uid://bgaiky3gn6gne" path="res://player.tscn" id="1_5ygqn"]
[ext_resource type="PackedScene" uid="uid://ccjt185l1ae63" path="res://pause_menu.tscn" id="4_ktec1"]
[ext_resource type="PackedScene" uid="uid://dxmfhgqkyen2y" path="res://inventory.tscn" id="5_c2b3x"]
[ext_resource type="Texture2D" uid="uid://j7lwpe47sytg" path="res://assets/ТЕКСТУРЫЫ.png" id="6_klaar"]
[ext_resource type="PackedScene" uid="uid://cvwyykdvxj10" path="res://inventory_ui.tscn" id="7_102k6"]
[ext_resource type="Texture2D" uid="uid://4ue4a1hicvr4" path="res://assets/ТЕКСТУРЫ НЕСКОЛЬКО КОМНАТ.png" id="7_wh0q2"]
[ext_resource type="Texture2D" uid="uid://3d1etm1sbjey" path="res://assets/двооор.png" id="7_yj4be"]
[ext_resource type="Texture2D" uid="uid://nr3tcc2r3qqi" path="res://assets/текстурики разные.png" id="9_0gwuv"]
[ext_resource type="PackedScene" uid="uid://c0hvmghvtaxgr" path="res://hud.tscn" id="9_dv8iw"]
[ext_resource type="PackedScene" uid="uid://cybtdnfpw2x5d" path="res://level_exit.tscn" id="11_wimo1"]
[ext_resource type="PackedScene" uid="uid://dcuwcuehr0eai" path="res://lose_screen.tscn" id="12_4swew"]
[ext_resource type="PackedScene" uid="uid://dlx8172kf6w8s" path="res://level_exit_ui.tscn" id="12_th6pi"]
[ext_resource type="PackedScene" uid="uid://ct8g0wwkspul2" path="res://win_screen.tscn" id="13_kd5ig"]
[ext_resource type="AudioStream" uid="uid://1i7pb1jlx5ul" path="res://assets/cartoon-mischief-218560.mp3" id="15_227yq"]

[sub_resource type="TileMapPattern" id="TileMapPattern_d8ltd"]
tile_data = PackedInt32Array(0, 262144, 2, 65536, 262144, 3)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ewsac"]
texture = ExtResource("9_0gwuv")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
12:0/0 = 0
13:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
12:1/0 = 0
13:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
6:2/0/z_index = 4
6:2/0/y_sort_origin = 5
8:2/0 = 0
8:2/0/z_index = 4
9:2/next_alternative_id = 3
9:2/0 = 0
9:2/0/z_index = 4
9:2/0/y_sort_origin = 14
10:2/0 = 0
10:2/0/z_index = 4
10:2/0/y_sort_origin = 14
11:2/next_alternative_id = 5
11:2/0 = 0
11:2/0/z_index = 4
11:2/0/y_sort_origin = 14
11:2/3 = 3
11:2/3/flip_v = true
11:2/3/transpose = true
11:2/3/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
11:2/4 = 4
11:2/4/transpose = true
11:2/4/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
6:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
8:3/0 = 0
8:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
9:3/0 = 0
9:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
10:3/0 = 0
10:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
11:3/0 = 0
11:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:4/0 = 0
1:4/0 = 0
3:4/0 = 0
8:4/0 = 0
8:4/0/z_index = 4
8:4/0/y_sort_origin = 14
8:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
9:4/0 = 0
9:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
10:4/0 = 0
10:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
11:4/0 = 0
11:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:5/0 = 0
1:5/0 = 0
3:5/0 = 0
4:5/0 = 0
6:5/0 = 0
6:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
7:5/0 = 0
7:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
8:5/0 = 0
8:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
9:5/0 = 0
9:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
6:6/0 = 0
6:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
7:6/0 = 0
7:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
8:6/0 = 0
8:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
9:6/0 = 0
9:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
6:7/0 = 0
6:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
7:7/0 = 0
7:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
8:7/0 = 0
8:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
9:7/0 = 0
9:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
6:4/0 = 0
6:4/0/z_index = 4
6:4/0/y_sort_origin = 14
6:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
7:4/0 = 0
7:4/0/z_index = 4
7:4/0/y_sort_origin = 14
4:4/0 = 0
5:4/0 = 0
5:5/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_m1tu3"]
texture = ExtResource("6_klaar")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
0:5/0 = 0
1:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_y0l6w"]
texture = ExtResource("7_wh0q2")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
0:2/0 = 0
1:2/next_alternative_id = 4
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:2/1 = 1
1:2/1/transpose = true
1:2/1/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:2/2 = 2
1:2/2/flip_h = true
1:2/2/transpose = true
1:2/2/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:2/3 = 3
1:2/3/flip_v = true
1:2/3/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
0:3/0 = 0
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
0:4/0 = 0
0:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:4/0 = 0
2:4/0 = 0
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
0:5/0 = 0
0:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:5/0 = 0
1:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
2:5/0 = 0
2:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:6/0 = 0
3:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:7/0 = 0
3:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:7/0 = 0
2:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:6/0 = 0
2:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:6/0 = 0
1:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:6/0 = 0
0:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:7/0 = 0
1:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:7/0 = 0
0:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
4:7/0 = 0
4:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
5:7/0 = 0
5:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
5:6/0 = 0
5:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
4:6/0 = 0
4:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)

[sub_resource type="TileSet" id="TileSet_74edm"]
tile_size = Vector2i(32, 32)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_ewsac")
sources/1 = SubResource("TileSetAtlasSource_m1tu3")
sources/3 = SubResource("TileSetAtlasSource_y0l6w")
pattern_0 = SubResource("TileMapPattern_d8ltd")

[sub_resource type="TileMapPattern" id="TileMapPattern_fsh2g"]
tile_data = PackedInt32Array(0, 655360, 5, 65536, 655360, 6)

[sub_resource type="TileMapPattern" id="TileMapPattern_ul6l3"]
tile_data = PackedInt32Array(0, 851968, 5, 65536, 851968, 6)

[sub_resource type="TileMapPattern" id="TileMapPattern_mmkaf"]
tile_data = PackedInt32Array(0, 917504, 4, 65536, 720896, 6, 1, 983040, 4, 65537, 720896, 6)

[sub_resource type="TileMapPattern" id="TileMapPattern_k1i16"]
tile_data = PackedInt32Array(0, 851968, 4, 1, 983040, 5)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_xj0mh"]
texture = ExtResource("7_yj4be")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
12:0/0 = 0
13:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
12:1/0 = 0
13:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
16:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
0:5/0 = 0
1:5/0 = 0
3:5/0 = 0
4:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:4/0 = 0
14:5/0 = 0
15:5/0 = 0
15:4/0 = 0
15:6/0 = 0
14:6/0 = 0
14:7/0 = 0
15:7/0 = 0

[sub_resource type="TileSet" id="TileSet_k23w5"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_xj0mh")
pattern_0 = SubResource("TileMapPattern_fsh2g")
pattern_1 = SubResource("TileMapPattern_ul6l3")
pattern_2 = SubResource("TileMapPattern_mmkaf")
pattern_3 = SubResource("TileMapPattern_k1i16")

[node name="world" type="Node2D"]
process_mode = 3
y_sort_enabled = true
texture_filter = 1
script = ExtResource("1_2dabk")
level_id = 0
cops_number = 10

[node name="pausable" type="Node" parent="."]
process_mode = 1

[node name="police_timer" type="Timer" parent="pausable"]
wait_time = 10.0
one_shot = true
autostart = true

[node name="SubViewport" type="SubViewport" parent="pausable"]
handle_input_locally = false
canvas_item_default_texture_filter = 0
size = Vector2i(320, 512)
render_target_update_mode = 4

[node name="inventory" parent="pausable/SubViewport" instance=ExtResource("5_c2b3x")]

[node name="world" type="Node2D" parent="pausable"]
y_sort_enabled = true

[node name="player" parent="pausable/world" instance=ExtResource("1_5ygqn")]

[node name="cops_spawn" type="Node2D" parent="pausable/world"]
y_sort_enabled = true

[node name="item_stashes" type="Node2D" parent="pausable/world"]
y_sort_enabled = true

[node name="props" type="Node2D" parent="pausable/world"]
y_sort_enabled = true

[node name="level_exit" parent="pausable/world" instance=ExtResource("11_wimo1")]

[node name="level_exit_cooldown" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[node name="floor" type="TileMapLayer" parent="."]
self_modulate = Color(1, 1, 1, 0.545098)
y_sort_enabled = true
position = Vector2(-1, -1)
tile_set = SubResource("TileSet_74edm")

[node name="walls" type="TileMapLayer" parent="."]
z_index = 1
y_sort_enabled = true
tile_set = SubResource("TileSet_74edm")
y_sort_origin = 1

[node name="yard" type="TileMapLayer" parent="."]
z_index = 1
y_sort_enabled = true
tile_set = SubResource("TileSet_k23w5")

[node name="ui" type="CanvasLayer" parent="."]

[node name="hud" parent="ui" instance=ExtResource("9_dv8iw")]

[node name="inventory" parent="ui" node_paths=PackedStringArray("inventory_viewport", "inventory") instance=ExtResource("7_102k6")]
visible = false
inventory_viewport = NodePath("../../pausable/SubViewport")
inventory = NodePath("../../pausable/SubViewport/inventory")

[node name="pause_menu" parent="ui" instance=ExtResource("4_ktec1")]
visible = false

[node name="level_exit_ui" parent="ui" instance=ExtResource("12_th6pi")]
visible = false

[node name="lose_screen" parent="ui" instance=ExtResource("12_4swew")]
visible = false

[node name="win_screen" parent="ui" instance=ExtResource("13_kd5ig")]
visible = false

[node name="navigation" type="Node" parent="."]

[node name="regions" type="Node" parent="navigation"]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("15_227yq")
volume_db = -14.0

[connection signal="timeout" from="pausable/police_timer" to="." method="_on_police_timer_timeout"]
[connection signal="can_interact" from="pausable/world/player" to="ui/hud" method="_on_can_interact"]
[connection signal="cannot_interact" from="pausable/world/player" to="ui/hud" method="_on_cannot_interact"]
[connection signal="open_item_shash" from="pausable/world/player" to="." method="_on_open_item_stash"]
[connection signal="stamina_changed" from="pausable/world/player" to="ui/hud" method="_on_stamina_changed"]
[connection signal="stamina_ran_out" from="pausable/world/player" to="ui/hud" method="_on_stamina_ran_out"]
[connection signal="stamina_replenished" from="pausable/world/player" to="ui/hud" method="_on_stamina_replenished"]
[connection signal="level_exited" from="pausable/world/level_exit" to="." method="_on_level_exited"]
[connection signal="quit_to_menu" from="ui/pause_menu" to="." method="_on_quit_to_menu"]
[connection signal="resume" from="ui/pause_menu" to="." method="_on_resume"]
[connection signal="leave_level" from="ui/level_exit_ui" to="." method="_on_leave_level"]
[connection signal="stay_on_level" from="ui/level_exit_ui" to="." method="_on_stay_on_level"]
[connection signal="quit_to_menu" from="ui/lose_screen" to="." method="_on_quit_to_menu"]
[connection signal="restart" from="ui/lose_screen" to="." method="_on_restart"]
[connection signal="next_level" from="ui/win_screen" to="." method="_on_next_level"]
[connection signal="quit_to_menu" from="ui/win_screen" to="." method="_on_quit_to_menu"]
